--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ header figure {
 }
 
 .header-divider {
-  width: 60%;
+  width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
 }
@@ -186,6 +186,7 @@ aside {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-flow: row wrap;
 }
 
 .features p {
@@ -380,90 +381,208 @@ footer .copyright {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+@media only screen and (min-width: 768px) {
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
-}
+  header {
+    padding: 33px 0;
+    justify-content: space-around;
 
-@media print,
-(-webkit-min-device-pixel-ratio: 1.25),
-(min-resolution: 1.25dppx),
-(min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
+  }
 
-/* ==========================================================================
+  header .content-wrapper {
+    width: 100%;
+    jusitfy-content: space-between;
+  }
+
+  header nav {
+    width: 20%;
+  }
+
+  header nav ul {
+    justify-content: space-between;
+  }
+
+  .header-divider {
+    display: none;
+  }
+
+  /* aside */
+  aside .content-wrapper {
+    margin: 50px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 40%;
+    margin: 0;
+
+    /* Features */
+
+    .features article {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: column wrap;
+      flex-basis: 50%;
+    }
+
+    .features .features-item-description {
+      width: 50%;
+    }
+
+    .faq-content {}
+
+    /* Reviews */
+    .reviews article {
+      display: flex;
+      justify-content: space-between;
+
+    }
+
+    .reviews article div {
+      width: 49%;
+    }
+
+    /* Footer */
+    footer .content-wrapper {
+      width: 65%;
+      margin: 100px 0;
+    }
+
+    .footer-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    footer .contact {
+      margin-bottom: 0;
+    }
+
+    footer .copyright {
+      width: 100%:
+    }
+
+    /*about page*/
+
+    .mission-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 20px;
+    }
+
+    .mission-content p {
+      width: 45%;
+    }
+
+    .contact-section .content-wrapper h2 {
+      width: 80%
+    }
+
+    .contact-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+
+    }
+
+    /* FAQ Page==========================================================================*/
+    .faq .content-wrapper {
+      justify-content: space-between;
+    }
+
+    .faq-content {
+      flex-basis: 45%;
+    }
+
+    .faq h2 {
+      width: 100%;
+    }
+
+    @media only screen and (min-width: 1200px) {}
+
+    /* 
+
+==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    https://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
 
-@media print {
+    @media print {
 
-  *,
-  *::before,
-  *::after {
-    background: #fff !important;
-    color: #000 !important;
-    /* Black prints faster */
-    box-shadow: none !important;
-    text-shadow: none !important;
-  }
+      *,
+      *::before,
+      *::after {
+        background: #fff !important;
+        color: #000 !important;
+        /* Black prints faster */
+        box-shadow: none !important;
+        text-shadow: none !important;
+      }
 
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
+      a,
+      a:visited {
+        text-decoration: underline;
+      }
 
-  a[href]::after {
-    content: " ("attr(href) ")";
-  }
+      a[href]::after {
+        content: " ("attr(href) ")";
+      }
 
-  abbr[title]::after {
-    content: " ("attr(title) ")";
-  }
+      abbr[title]::after {
+        content: " ("attr(title) ")";
+      }
 
-  /*
+      /*
    * Don't show links that are fragment identifiers,
    * or use the `javascript:` pseudo protocol
    */
-  a[href^="#"]::after,
-  a[href^="javascript:"]::after {
-    content: "";
-  }
+      a[href^="#"]::after,
+      a[href^="javascript:"]::after {
+        content: "";
+      }
 
-  pre {
-    white-space: pre-wrap !important;
-  }
+      pre {
+        white-space: pre-wrap !important;
+      }
 
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
+      pre,
+      blockquote {
+        border: 1px solid #999;
+        page-break-inside: avoid;
+      }
 
-  /*
+      /*
    * Printing Tables:
    * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
    */
-  thead {
-    display: table-header-group;
-  }
+      thead {
+        display: table-header-group;
+      }
 
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
+      tr,
+      img {
+        page-break-inside: avoid;
+      }
 
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
+      p,
+      h2,
+      h3 {
+        orphans: 3;
+        widows: 3;
+      }
 
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
-}
+      h2,
+      h3 {
+        page-break-after: avoid;
+      }
+    }
