--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,7 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  color: #e2e3ed;
   text-align: left;
 }
 
@@ -110,6 +111,7 @@ a {
 
 h2 {
   font-family: 'Poppins', sans-serif;
+  font-weight: 500;
   font-size: 1.875em;
 
 }
@@ -117,18 +119,15 @@ h2 {
 h3,
 h4 {
   font-family: 'Poppins', sans-serif;
+  font-weight: 500;
   margin: 20px 0;
-  font-size: 1em;
+  font-size: 1.125em;
 }
 
 p {
   font-size: .875em;
   line-height: 1.285;
 }
-
-img {}
-
-figure {}
 
 address {
   font-style: normal;
@@ -139,13 +138,12 @@ address {
   margin: 50px 0;
 }
 
-
 /* base header - footer styles ---------*/
-
 
 header,
 footer {
-  display: flex;
+  background-color: #202322;
+  d display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
@@ -172,6 +170,7 @@ header figure {
 }
 
 .header-divider {
+  background: #3a3a3a;
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
@@ -180,6 +179,9 @@ header figure {
 
 header nav {
   width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -192,6 +194,9 @@ header nav ul {
   justify-content: space-around;
 }
 
+header nav ul li {
+  font-size: 1.125em;
+}
 
 
 /* --------- Mobile styles - Homepage ----------- */
@@ -202,7 +207,15 @@ header nav ul {
   flex-flow: row wrap;
 }
 
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
 aside {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -227,7 +240,6 @@ aside {
 }
 
 .features .features-items {
-  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -235,10 +247,12 @@ aside {
 }
 
 .features p {
+  text-align: center;
   margin: 0;
 }
 
 .reviews {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -246,6 +260,7 @@ aside {
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
@@ -257,6 +272,7 @@ aside {
 
 
 .mission {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -265,6 +281,7 @@ aside {
 
 /* contact */
 .contact-section {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -279,6 +296,7 @@ aside {
 /****** Faq page *****/
 
 .faq {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -301,9 +319,14 @@ aside {
   margin-bottom: 50px;
 }
 
+.faq-content h4 {
+  line-height: 1.333;
+}
+
 /****** footer *****/
 
 footer {
+  text-align: center;
   flex-direction: column;
 }
 
@@ -338,11 +361,7 @@ footer .copyright {
 }
 
 
-
-
-
-
-==========================================================================Helper classes==========================================================================*/
+*/==========================================================================Helper classes==========================================================================*/
 /*
  * Hide visually and from screen readers
  */
@@ -421,6 +440,32 @@ footer .copyright {
   clear: both;
 }
 
+aside .form {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
@@ -432,6 +477,16 @@ footer .copyright {
     margin: 100px 0;
   }
 
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
   header {
     padding: 33px 0;
     justify-content: space-around;
@@ -440,7 +495,11 @@ footer .copyright {
 
   header .content-wrapper {
     width: 100%;
-    jusitfy-content: space-between;
+    justify-content: space-between;
+  }
+
+  header figure {
+    width: 30%;
   }
 
   header nav {
@@ -455,6 +514,13 @@ footer .copyright {
     display: none;
   }
 
+
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+  }
+
   /* aside */
   aside .content-wrapper {
     margin: 50px 0;
@@ -467,144 +533,218 @@ footer .copyright {
   aside .content-wrapper .form {
     width: 40%;
     margin: 0;
+  }
+
+  /* Features */
+
+  .features h2 {
+    margin-bottom: 20px;
+  }
+
+  .features article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+  }
+
+  .features .features-item-description {
+    width: 62%;
+  }
+
+  /* Reviews */
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+
+  }
+
+  .reviews h2 {
+    width: 85%;
+  }
+
+  .reviews article div {
+    width: 49%;
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
+  }
+
+  /* Footer */
+  footer .content-wrapper {
+    width: 65%;
+    margin: 100px 0;
+  }
+
+  footer .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  footer .contact {
+    margin-bottom: 0;
+  }
+
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+    line-height: 1.285;
+  }
+
+  footer .copyright {
+    width: 100%;
+  }
+
+  /*about page*/
+
+  .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+  }
+
+  .mission-content p {
+    width: 45%;
+  }
+
+  .contact-section .content-wrapper h2 {
+    width: 80%
+  }
+
+  .contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+  }
+
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
+  /* FAQ Page==========================================================================*/
+  .faq .content-wrapper {
+    justify-content: space-between;
+  }
+
+  .faq-content {
+    flex-basis: 45%;
+  }
+
+  .faq h2 {
+    width: 100%;
+  }
+
+  .faq h4,
+  .faq p {
+    font-size: .875em;
+    line-height: 1.125;
+  }
+
+  @media only screen and (min-width: 1200px) {
+
+    header {
+      padding: 15px 0;
+    }
+
+    .content-wrapper {
+      max-width: 960px;
+    }
+
+    h2 {
+      font-size: 2.25em;
+    }
+
+    h3,
+    h4 {
+      font-size: 1.875em;
+    }
+
+    p {
+      font-size: 1.125em;
+      line-height: 1.333;
+    }
+
+    /* Hero */
+    .hero-area h1 {
+      width: 60%;
+      font-size: 3.75em;
+    }
+
+    /* Aside */
+    aside .content-wrapper {
+      justify-content: space-around;
+    }
+
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+      width: 30%;
+    }
+
+    .form-description p {
+      font-size: 1.125em;
+    }
 
     /* Features */
+    .features h2 {
+      width: 90%;
+    }
 
     .features article {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-flow: column wrap;
-      flex-basis: 50%;
+      flex-basis: 33%;
     }
-
-    .features .features-item-description {
-      width: 50%;
-    }
-
-    .faq-content {}
 
     /* Reviews */
-    .reviews article {
-      display: flex;
-      justify-content: space-between;
-
-    }
-
     .reviews article div {
-      width: 49%;
+      width: 42%;
     }
 
-    /* Footer */
-    footer .content-wrapper {
-      width: 65%;
-      margin: 100px 0;
+    .reviews h2 {
+      padding-bottom: 50px;
     }
 
-    .footer-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    footer h4 {
+      font-size: 1.875em;
     }
 
-    footer .contact {
-      margin-bottom: 0;
-    }
-
-    footer .copyright {
-      width: 100%:
-    }
-
-    /*about page*/
-
-    .mission-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding-top: 20px;
-    }
-
-    .mission-content p {
-      width: 45%;
-    }
-
-    .contact-section .content-wrapper h2 {
-      width: 80%
-    }
-
-    .contact-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-
-    }
-
-    /* FAQ Page==========================================================================*/
-    .faq .content-wrapper {
-      justify-content: space-between;
-    }
-
-    .faq-content {
-      flex-basis: 45%;
-    }
-
-    .faq h2 {
-      width: 100%;
-    }
-
-    @media only screen and (min-width: 1200px) {
-      .content-wrapper {
-        max-width: 960px;
-      }
-
-      /* Hero */
-      .hero-area h1 {
-        width: 60%;
-      }
-
-      /* Aside */
-      aside .content-wrapper {
-        justify-content: space-around;
-      }
-
-      aside .content-wrapper .form-description,
-      aside .content-wrapper .form {
-        width: 30%;
-      }
-
-      /* Features */
-      .features h2 {
-        width: 90%;
-      }
-
-      .features article {
-        flex-basis: 33%;
-      }
-
-      /* Reviews */
-      .reviews article div {
-        width: 42%;
-      }
-
-      /* ==========================================================================
+    /* ==========================================================================
    About Page
    ========================================================================== */
-      .mission h2,
-      .contact-section .content-wrapper h2 {
-        width: 95%;
-      }
-
-      /* ==========================================================================
-   FAQ Page
-   ========================================================================== */
-      .faq h2 {
-        width: 100%;
-      }
-
-
+    .mission h2,
+    .contact-section .content-wrapper h2 {
+      width: 95%;
     }
 
-    /* 
+    .contact-content h4 {
+      font-size: 1.875em;
+    }
+
+    /* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+    .faq h2 {
+      width: 100%;
+      font-size: 3em;
+    }
+
+    .faq h4,
+    .faq p {
+      font-size: 1.125em;
+      line-height: 1;
+    }
+
+  }
+
+  /* 
 
 ==========================================================================
    Print styles.
@@ -612,72 +752,72 @@ footer .copyright {
    https://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
 
-    @media print {
+  @media print {
 
-      *,
-      *::before,
-      *::after {
-        background: #fff !important;
-        color: #000 !important;
-        /* Black prints faster */
-        box-shadow: none !important;
-        text-shadow: none !important;
-      }
+    *,
+    *::before,
+    *::after {
+      background: #fff !important;
+      color: #000 !important;
+      /* Black prints faster */
+      box-shadow: none !important;
+      text-shadow: none !important;
+    }
 
-      a,
-      a:visited {
-        text-decoration: underline;
-      }
+    a,
+    a:visited {
+      text-decoration: underline;
+    }
 
-      a[href]::after {
-        content: " ("attr(href) ")";
-      }
+    a[href]::after {
+      content: " ("attr(href) ")";
+    }
 
-      abbr[title]::after {
-        content: " ("attr(title) ")";
-      }
+    abbr[title]::after {
+      content: " ("attr(title) ")";
+    }
 
-      /*
+    /*
    * Don't show links that are fragment identifiers,
    * or use the `javascript:` pseudo protocol
    */
-      a[href^="#"]::after,
-      a[href^="javascript:"]::after {
-        content: "";
-      }
+    a[href^="#"]::after,
+    a[href^="javascript:"]::after {
+      content: "";
+    }
 
-      pre {
-        white-space: pre-wrap !important;
-      }
+    pre {
+      white-space: pre-wrap !important;
+    }
 
-      pre,
-      blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-      }
+    pre,
+    blockquote {
+      border: 1px solid #999;
+      page-break-inside: avoid;
+    }
 
-      /*
+    /*
    * Printing Tables:
    * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
    */
-      thead {
-        display: table-header-group;
-      }
-
-      tr,
-      img {
-        page-break-inside: avoid;
-      }
-
-      p,
-      h2,
-      h3 {
-        orphans: 3;
-        widows: 3;
-      }
-
-      h2,
-      h3 {
-        page-break-after: avoid;
-      }
+    thead {
+      display: table-header-group;
     }
+
+    tr,
+    img {
+      page-break-inside: avoid;
+    }
+
+    p,
+    h2,
+    h3 {
+      orphans: 3;
+      widows: 3;
+    }
+
+    h2,
+    h3 {
+      page-break-after: avoid;
+    }
+  }
