--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,31 @@ p {
   line-height: 1.285;
 }
 
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+img {
+  width: 100%;
+}
+
+background-image {
+  url("assets/rawpixel-800820-unsplash1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+
+figure {
+  margin: 0;
+}
+
+
 address {
   font-style: normal;
 }
@@ -143,7 +168,7 @@ address {
 header,
 footer {
   background-color: #202322;
-  d display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
@@ -164,9 +189,11 @@ header .content-wrapper {
 }
 
 header figure {
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-flow: row wrap;
 }
 
 .header-divider {
@@ -225,6 +252,9 @@ aside {
 /* main */
 
 .features {
+  background: url ('img/omar-lopez-296944-unsplash.jpg');
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -360,8 +390,24 @@ footer .copyright {
   margin: 20px 0;
 }
 
+.hero-area {
+  background: url(../img/unplugged-retreat.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
 
-*/==========================================================================Helper classes==========================================================================*/
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+/*==========================================================================Helper classes==========================================================================*/
 /*
  * Hide visually and from screen readers
  */
@@ -439,6 +485,15 @@ footer .copyright {
 .clearfix::after {
   clear: both;
 }
+
+aside {
+  background-color: #527158;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 
 aside .form {
   margin-top: 30px;
