--- a/main.css
+++ b/main.css
@@ -113,6 +113,7 @@ h2 {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.875em;
+  margin: 0;
 
 }
 
@@ -141,18 +142,9 @@ img {
   width: 100%;
 }
 
-background-image {
-  url("assets/rawpixel-800820-unsplash1.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-
 figure {
   margin: 0;
 }
-
 
 address {
   font-style: normal;
@@ -198,11 +190,10 @@ header figure {
 
 .header-divider {
   background: #3a3a3a;
-  width: 100%;
   height: 1px;
+  width: 100%;
   margin: 10px 0 20px 0;
 }
-
 
 header nav {
   width: 60%;
@@ -229,6 +220,10 @@ header nav ul li {
 /* --------- Mobile styles - Homepage ----------- */
 
 .hero-area {
+  background: url(../img/unplugged-retreat.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -252,7 +247,7 @@ aside {
 /* main */
 
 .features {
-  background: url ('img/omar-lopez-296944-unsplash.jpg');
+  background: url('../img/unplugged-retreat-features.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -276,6 +271,11 @@ aside {
   flex-flow: row wrap;
 }
 
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
+}
+
 .features p {
   text-align: center;
   margin: 0;
@@ -285,7 +285,7 @@ aside {
   background-color: #2a423a;
   display: flex;
   justify-content: center;
-  align-items: center;
+  flex-flow: row wrap;
 }
 
 .reviews h2 {
@@ -337,6 +337,12 @@ aside {
   margin: 0;
 }
 
+/* features icon */
+
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
+}
 
 /****** Faq page *****/
 
@@ -358,6 +364,7 @@ aside {
 
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .faq-content {
@@ -375,41 +382,63 @@ footer {
   flex-direction: column;
 }
 
+footer p {
+  margin: 0;
+  line-height: 1.285;
+}
 
 footer .content-wrapper {
   width: 55%;
   margin: 50px 0;
 }
 
-footer p {
-  margin: 0;
-}
-
 footer .contact {
   margin-bottom: 50px;
 }
 
-footer .social-icons p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 footer .social-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  color: white;
+}
+
+footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
+
+}
+
+footer .social-icons a {
+  color: white;
+  size: 20px;
 }
 
 footer .copyright {
   margin: 20px 0;
 }
 
+footer h4 {
+  font-size: 1.5em;
+  margin-bottom: 40px;
+}
+
+
 .hero-area {
-  background: url(../img/unplugged-retreat.jpg);
+  background: url(../img/woman-on-bridge.jpg);
   background-size: cover;
   background-position: center;
-  min-height: 500px;
+  min-height: 800px;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -623,6 +652,10 @@ input[type=button] {
     width: 62%;
   }
 
+  .features i {
+    margin-bottom: 30px;
+  }
+
   /* Reviews */
   .reviews article {
     display: flex;
@@ -667,6 +700,12 @@ input[type=button] {
 
   footer p {
     line-height: 1.285;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
+
   }
 
   footer .copyright {
@@ -789,9 +828,14 @@ input[type=button] {
     /* ==========================================================================
    About Page
    ========================================================================== */
+    .map figure {
+      padding-bottom: 37.5%;
+    }
+
     .mission h2,
     .contact-section .content-wrapper h2 {
       width: 95%;
+      font-size: 3em;
     }
 
     .contact-content h4 {
